# Layered_Architecture

./: AppSettings.toml  Cargo.toml  README.md
src/: environment.rs  main.rs
src/bll/: logic.rs
src/dal/: crud_ops.rs  mod.rs
src/dal/models/: task.rs
src/ui/: presentation.rs
